inseridos arquivos vazios dos caps da parte 2

--- a/06_capitulo.qmd
+++ b/06_capitulo.qmd
@@ -1,4 +1,4 @@
-# Introdução ao RStudio 
+# Introdução ao RStudio {#sec-rstudio}
 
 O objetivo deste capítulo é introduzir o Ambiente de Desenvolvimento
 Integrado RStudio, incluindo orientações sobre como instalar, 
