--- a/referencias.bib
+++ b/referencias.bib
@@ -68,6 +68,7 @@
   doi = {10.1111/1740-9713.01586}
 }
 
+
 @manual{ibm_crisp_dm,
   title        = {CRISP-DM 1.0: Step-by-step data mining guide},
   author       = {Chapman, Pete and Clinton, Julian and Kerber, Randy and Khabaza, Thomas and Reinartz, Thomas and Shearer, Colin and Wirth, R{\"u}diger},
@@ -121,4 +122,101 @@
 }
 
 
+@article{IhakaGentleman1996,
+  title   = {R: A Language for Data Analysis and Graphics},
+  author  = {Ross Ihaka and Robert Gentleman},
+  journal = {Journal of Computational and Graphical Statistics},
+  year    = {1996},
+  volume  = {5},
+  number  = {3},
+  pages   = {299--314},
+  doi     = {10.1080/10618600.1996.10474713}
+}
+
+
+@manual{RCoreTeam2026,
+  title        = {R: A Language and Environment for Statistical Computing},
+  author       = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address      = {Vienna, Austria},
+  year         = {2026},
+  note         = {{ISBN} 3-900051-07-0},
+  url          = {https://www.R-project.org/}
+}
+
+
+@book{BeckerChambers1984,
+  title     = {S: An Interactive Environment for Data Analysis and Graphics},
+  author    = {Richard A. Becker and John M. Chambers},
+  publisher = {Wadsworth Advanced Book Program},
+  address   = {Belmont, CA},
+  year      = {1984},
+  isbn      = {053403313X}
+}
+
+
+@book{BeckerChambersWilks1988,
+  title     = {The New S Language: A Programming Environment for Data Analysis and Graphics},
+  author    = {Richard A. Becker and John M. Chambers and Allan R. Wilks},
+  publisher = {Wadsworth \& Brooks/Cole Advanced Books \& Software},
+  address   = {Pacific Grove, CA},
+  year      = {1988},
+  isbn      = {053409192X}
+}
+
+
+@book{ChambersHastie1992,
+  title     = {Statistical Models in S},
+  editor    = {John M. Chambers and Trevor J. Hastie},
+  publisher = {Chapman \& Hall},
+  year      = {1992},
+  isbn      = {041283040X}
+}
+
+
+@book{Chambers1998,
+  title     = {Programming with Data: A Guide to the S Language},
+  author    = {John M. Chambers},
+  publisher = {Springer},
+  address   = {New York, NY},
+  year      = {1998},
+  edition   = {1},
+  isbn      = {978-0-387-98503-9},
+  url       = {https://link.springer.com/book/9780387985039}
+}
+
+
+@book{VenablesRipley2000,
+  title     = {S Programming},
+  author    = {W. N. Venables and B. D. Ripley},
+  publisher = {Springer},
+  address   = {New York, NY},
+  year      = {2000},
+  edition   = {1},
+  isbn      = {978-0-387-98966-2},
+  doi       = {10.1007/978-0-387-21856-4},
+  url       = {https://link.springer.com/book/10.1007/978-0-387-21856-4}
+}
+
+
+@book{Chambers2008,
+  title     = {Software for Data Analysis: Programming with R},
+  author    = {John M. Chambers},
+  publisher = {Springer},
+  address   = {New York, NY},
+  year      = {2008},
+  doi       = {10.1007/978-0-387-75936-4},
+  url       = {https://link.springer.com/book/10.1007/978-0-387-75936-4}
+}
+
+
+@book{VenablesRipley2002,
+  title     = {Modern Applied Statistics with S},
+  author    = {W. N. Venables and B. D. Ripley},
+  publisher = {Springer},
+  address   = {New York, NY},
+  year      = {2002},
+  edition   = {4},
+  url       = {https://www.stats.ox.ac.uk/pub/MASS4/}
+}
 
