--- a/referencias.bib
+++ b/referencias.bib
@@ -220,3 +220,38 @@
   url       = {https://www.stats.ox.ac.uk/pub/MASS4/}
 }
 
+
+
+@book{chacon2014progit,
+  title = {Pro Git},
+  author = {Chacon, Scott and Straub, Ben},
+  year = {2014},
+  edition = {2},
+  publisher = {Apress},
+  note = {Disponível gratuitamente em \url{https://git-scm.com/book/en/v2}},
+  url = {https://git-scm.com/book/en/v2},
+}
+
+
+@article{blischak2016version,
+  title = {A Quick Introduction to Version Control with Git and {GitHub}},
+  author = {Blischak, John D and Davenport, Emily R and Wilson, Greg},
+  journal = {PLoS Computational Biology},
+  volume = {12},
+  number = {1},
+  pages = {e1004668},
+  year = {2016},
+  publisher = {Public Library of Science},
+  doi = {10.1371/journal.pcbi.1004668},
+  url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004668},
+}
+
+
+@misc{oliveira2020git4noobs,
+  author = {Oliveira, Daniel},
+  title = {Git4Noobs: Tutorial de Git para iniciantes},
+  year = {2020},
+  howpublished = {GitHub Repository},
+  url = {https://github.com/DanielHe4rt/git4noobs},
+  note = {Acessado em: \today}
+}
